--- a/public/criarpedido.html
+++ b/public/criarpedido.html
@@ -22,7 +22,7 @@
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="id">
                     ID
                 </label>
-                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="customerName" type="text" placeholder="ID">
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="id" type="text" placeholder="ID">
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="customerName">
                     Nome do Cliente
